--- a/LOFractalsGPU/LOFractalsGPU.vcxproj
+++ b/LOFractalsGPU/LOFractalsGPU.vcxproj
@@ -156,6 +156,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="3rd party\WICTextureLoader.cpp" />
+    <ClCompile Include="EqualityChecker.cpp" />
     <ClCompile Include="FractalGen.cpp" />
     <ClCompile Include="LOFractalsGPU.cpp" />
     <ClCompile Include="PNGSaver.cpp" />
@@ -291,6 +292,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="3rd party\WICTextureLoader.h" />
+    <ClInclude Include="EqualityChecker.hpp" />
     <ClInclude Include="FractalGen.hpp" />
     <ClInclude Include="PNGSaver.hpp" />
     <ClInclude Include="Util.hpp" />
