--- a/LOFractalsGPU/LOFractalsGPU.vcxproj.filters
+++ b/LOFractalsGPU/LOFractalsGPU.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="InitialState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Downscaler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\FinalStateTransformCS.hlsl">
@@ -107,6 +110,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="InitialState.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Downscaler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
