--- a/LOFractalsGPU/LOFractalsGPU.vcxproj.filters
+++ b/LOFractalsGPU/LOFractalsGPU.vcxproj.filters
@@ -116,6 +116,18 @@
     <FxCompile Include="Shaders\FinalStateTransformSmoothCS.hlsl">
       <Filter>Shaders\StateTransform</Filter>
     </FxCompile>
+    <FxCompile Include="Shaders\StabilityNextStepSpawnCLICKRuLERESTRICTEDCS.hlsl">
+      <Filter>Shaders\NextStep</Filter>
+    </FxCompile>
+    <FxCompile Include="Shaders\StabilityNextStepSpawnRESTRICTEDCS.hlsl">
+      <Filter>Shaders\NextStep</Filter>
+    </FxCompile>
+    <FxCompile Include="Shaders\StabilityNextStepClickRuleRESTRICTEDCS.hlsl">
+      <Filter>Shaders\NextStep</Filter>
+    </FxCompile>
+    <FxCompile Include="Shaders\StabilityNextStepRESTRICTEDCS.hlsl">
+      <Filter>Shaders\NextStep</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FractalGen.hpp">
